# CudaInference

./: .gitignore  CMakeLists.txt
include/: ConvLayer.hpp  LinearLayer.hpp  Net.hpp  compute_util.cuh  helper_functions.cuh
python/: export_weights.py  myresnet.py  test_net.py
source/: ConvLayer.cu  LinearLayer.cu  Net.cpp  Tensor.cu  compute_util.cu  cutlass_gemm_op.cu  main_18.cpp  main_34.cpp
